--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -12,6 +12,7 @@
 
 <div class="main-content">
     {{>header}}
+    <p>This app uses data from mapbox.com and Openweathermap.org </p>
 </div>        
 
 {{>footer}}
