Added high and low to forecast. Styles added too

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -55,6 +55,10 @@ button {
     padding: 8px;
 }
 
-#message-1, #message-2 {
+#message-1 {
+    color: red;
+}
+
+#message-2 {
     color: green;
 }
